# QSDsan

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  0.414gL_pH_20d_AD.xlsx  20.14gL_pH_40d_AD.xlsx  AGENTS.md  AUTHORS.rst  B1_WERF_Nehal_copy.py  CHANGELOG.rst  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  CSTR-PFR.py  FAO1.xlsx  FAO2.xlsx  FAO3.xlsx  FAO4.xlsx  FAO5.xlsx  FAO6.xlsx  FAO7.xlsx  FAO8.xlsx  FAO9.xlsx  FAOSTAT1.xlsx  FAOSTAT2.xlsx  FAOSTAT3.xlsx  G1.py  H1.py  L1_Nehal.py  L1_Nehal_AD.py  L1_Nehal_AGC.py  L1_Nehal_PC.py  L1_Nehal_SC.py  L1_WERF_Nehal_copy.py  LICENSE.txt  MANIFEST.in  README.md  README.rst  Untitled-1.ipynb  (+34 more)
.github/: dependabot.yml  requirements-release.txt
legacy_files/: .travis.yml  appveyor.yml  binder.yaml
pH_ctrl=7, TS1/: 0.414gL_pH_20d_AD.xlsx  2.447gL_pH_20d_AD.xlsx  24.47gL_pH_20d_AD.xlsx  pH_levels_over_time.xlsx
pH_ctrl=7, TS2, 1MGD/: 0.0gL_pH_20d_AD.xlsx  pH_levels_over_time.xlsx
pH_ctrl=None, Glucose 20/: 0.01gL_pH_40d_AD.xlsx  20.14gL_pH_40d_AD.xlsx  pH_levels_over_time.xlsx
pH_ctrl=None, Glucose 20, 1MGD/: 20.14gL_pH_40d_AD.xlsx  pH_levels_over_time.xlsx  ~$20.14gL_pH_40d_AD.xlsx
pH_ctrl=None, TS1/: 0.414gL_pH_20d_AD.xlsx  2.447gL_pH_20d_AD.xlsx  24.47gL_pH_20d_AD.xlsx  pH_levels_over_time.xlsx
pH_ctrl=None, TS2, 1MGD/: 0.0gL_pH_20d_AD.xlsx  pH_levels_over_time.xlsx
pH_ctrol=7, Glucose 20/: 20.14gL_pH_40d_AD.xlsx  pH_levels_over_time.xlsx
pH_ctrol=7, Glucose 20, 1MGD/: 20.14gL_pH_40d_AD.xlsx  pH_levels_over_time.xlsx
qsdsan/: CEE598_HW1.py  CEE598_HW2.py  CEE598_HW2_Excel.py  CEE598_HW3.py  FAOSTAT1.csv  VWC.csv  __init__.py  _cod.py  _compat.py  _component.py  _components.py  _construction.py  _equipment.py  _flowsheet.py  _impact_indicator.py  _impact_item.py  _lca.py  _parse.py  _process.py  _sanflowsheet.py  _sanstream.py  _sanunit.py  _simple_tea.py  _sludge_pasteurization_service.py  _tea.py  _transportation.py  _units_of_measure.py  _waste_stream.py  country_specific.py  stats.py  units_of_measure.py  units_of_measure.txt
qsdsan.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sanitation/: __init__.py  _cod.py  _component.py  _components.py  _construction.py  _construction_materials.py  _impact_indicator.py  _impact_item.py  _lca.py  _materials.py  _ratios.csv  _sanunit.py  _simple_tea.py  _transportation.py  _unit.py  (+5 more)
sanitation.egg-info/: PKG-INFO  SOURCES.txt
(+1206 files in other folders)
