[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsdsan"
version = "1.5.3"
description = "Quantitative Sustainable Design for sanitation and resource recovery systems"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.12"
license = "NCSA"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Quantitative Sustainable Design Group"},
    {email = "quantitative.sustainable.design@gmail.com"},
]
keywords = [
    "quantitative sustainable design",
    "sanitation",
    "resource recovery",
    "techno-economic analysis",
    "life cycle assessment",
]
classifiers = [
    "Environment :: Console",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "thermosteam>=0.53.4",
    "biosteam>=2.53.10",
    "SALib>=1.4.5",
    "seaborn",
    "sympy>=1.8",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "nbval",
]
docs = [
    "sphinx>=7,<9",
    "sphinx-copybutton",
    "sphinx-design",
    "furo>=2024.1",
    "nbsphinx",
    "pandoc",
]
ci = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nbval",
]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "nbval",
    "sphinx>=7,<9",
    "sphinx-copybutton",
    "sphinx-design",
    "furo>=2024.1",
    "nbsphinx",
    "pandoc",
]

[project.urls]
Homepage = "https://qsdsan.com"
Documentation = "https://qsdsan.readthedocs.io"
Repository = "https://github.com/QSD-Group/QSDsan"

[tool.setuptools.packages.find]
where = ["."]
include = ["qsdsan*"]
namespaces = false

[tool.setuptools.package-data]
qsdsan = [
    "units_of_measure.txt",
    "data/*",
    "data/process_data/*",
    "data/sanunit_data/*",
    "data/sanunit_data/br/*",
    "data/sanunit_data/es/*",
    "data/sanunit_data/re/*",
    "equipments/*",
    "processes/*",
    "sanunits/*",
    "utils/*",
]
